# route-rs

./: '  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs  nice.rs  test.rs  try.rs
examples/lambda-runtime/: Cargo.toml
examples/lambda-runtime/src/: main.rs
examples/nice-extractors/: Cargo.toml
examples/nice-extractors/src/: main.rs
examples/sse/: Cargo.toml
examples/sse/src/: main.rs
examples/static-html/: Cargo.toml
examples/static-html/src/: main.rs
route/: Cargo.toml
route/examples/: basic.rs  hello_world.rs  nice_fns.rs  sse.rs  tcp.rs  test.rs  whole_package.rs  with_guards.rs
route/src/: app.rs  endpoint.rs  error.rs  from_request.rs  guard.rs  lib.rs  macros.rs  prelude.rs  respond.rs  route.rs  service.rs  web.rs
route/src/body/: boxbody.rs  error.rs  message_body.rs
route/src/resource/: guard.rs  macros.rs  mod.rs  resource.rs  route.rs  utils.rs
route/src/types/: authorization.rs  bytes.rs  cookie.rs  json.rs  long_polling.rs  mod.rs  new_sse.rs  params.rs  query.rs  redirect.rs  sse.rs  urlencoded.rs
route_contract/: Cargo.toml
route_contract/src/: lib.rs  method.rs  respondable.rs
route_contract/src/response/: macros.rs  mod.rs  respondable.rs
route_core/: Cargo.toml
route_core/src/: body.rs  endpoint.rs  error.rs  handler.rs  lib.rs  macros.rs  request.rs  respond.rs  respondable.rs  service.rs
route_core/src/request/: mod.rs
route_core/src/request/extractors/: json.rs  mod.rs  urlencoded.rs
route_core/src/types/: bytes.rs  json.rs  mod.rs  redirect.rs  urlencoded.rs
route_derive/: Cargo.toml
route_derive/src/: impl_route_get.rs  lib.rs
route_html/: Cargo.toml  testing.html
route_html/examples/: testing.rs
route_html/src/: class.rs  context.rs  head.rs  lib.rs  link.rs  style.rs  stylerule.rs  tag.rs
route_html/src/tags/: head.rs  html.rs  image.rs  link.rs  mod.rs  style.rs
route_html/src/tags/head/: mod.rs
route_html_derive/: Cargo.toml
route_html_derive/src/: lib.rs
route_http/: Cargo.toml
route_http/src/: body.rs  lib.rs  macros.rs  method.rs  mime.rs  status.rs  variable.rs
route_http/src/body/: message_body_impl.rs  mod.rs
route_http/src/request/: mod.rs  parser_from_str.rs
route_http/src/response/: mod.rs  respondable.rs
route_router/: Cargo.toml
route_router/benches/: router.rs
route_router/src/: lib.rs  node.rs  routekey.rs  router.rs  utils.rs
route_router/src/extractors/: mod.rs
route_server/: Cargo.toml
route_server/examples/: basic.rs  basic2.rs  test.rs  try.rs
route_server/src/: findable.rs  lib.rs  serve.rs  server.rs  server_builder.rs  threadpool.rs  utils.rs
route_utils/: Cargo.toml
route_utils/src/: lib.rs
scripts/: publish.sh  update-version.sh
src/: address.rs  endpoint.rs  handler.rs  lib.rs  main.rs  route.rs  service.rs
src/types/: bytes.rs  json.rs  mod.rs  redirect.rs  urlencoded.rs
titan/: Cargo.toml
titan-core/: Cargo.toml
titan-core/src/: handler.rs  lib.rs  request.rs  respond.rs
titan-derive/: Cargo.toml
titan-derive/src/: impl_route_get.rs  lib.rs
titan-html/: Cargo.toml  README.md
titan-html-core/: Cargo.toml
titan-html-core/src/: lib.rs  stylerule.rs  utils.rs  validatecss.rs
titan-html-derive/: Cargo.toml
titan-html-derive/src/: lib.rs
titan-html/benches/: html_bench.rs
titan-html/examples/: testing.rs
titan-html/src/: class.rs  context.rs  lib.rs  prelude.rs  stylerule.rs
titan-html/src/prelude/: __private_validatecss.rs  mod.rs
titan-html/src/tags/: html.rs  image.rs  link.rs  mod.rs  script.rs  style.rs
titan-html/src/tags/head/: mod.rs  reset.css
titan-http/: Cargo.toml
titan-http/src/: body.rs  lib.rs  method.rs
titan-http/src/request/: mod.rs  parser_from_str.rs
titan-http/src/response/: mod.rs
titan-lambda/: Cargo.toml
titan-lambda/src/: lambda_handler_service.rs  lib.rs
titan-router/: Cargo.toml
titan-router-derive/: Cargo.toml
titan-router-derive/src/: lib.rs
titan-router/benches/: router_bench.rs
titan-router/src/: lib.rs  routekey.rs  router.rs  segment.rs  segments.rs
titan-server/: Cargo.toml
titan-server/src/: lib.rs  server.rs  utils.rs
titan-utils/: Cargo.toml
titan-utils/src/: lib.rs  validatecss.rs
titan/benches/: router_bench.rs
titan/examples/: hello_world.rs  lambda.rs  nice_fns.rs  sse.rs  whole_package.rs  with_guards.rs
titan/src/: app.rs  endpoint.rs  guard.rs  handler.rs  html.rs  lambda.rs  lib.rs  macros.rs  route.rs  serve.rs  utils.rs  web.rs
titan/src/deploy/: lambda.rs  mod.rs
titan/src/deploy/lambda/: lambda_service.rs  mod.rs
titan/src/http/: mod.rs  request.rs  request_parser.rs  response.rs  response_parser.rs
titan/src/router/: mod.rs  router.rs  segment.rs  segments.rs
titan/src/types/: authorization.rs  bytes.rs  cookie.rs  json.rs  mod.rs  params.rs  path.rs  query.rs  redirect.rs  sse.rs  urlencoded.rs
