[workspace]
resolver = "2"
members = [
  "titan",
  "titan-core",
  "titan-http", 
  "titan-utils",
  "titan-server",
  "titan-router",
  "titan-html",
  "titan-html-derive",
  "titan-lambda",
]
exclude = ["lambda"]

[workspace.package]
authors = ["Vincent Thomas"]
categories = []
keywords = ["web"]
license = "MIT"
edition = "2021"
version = "0.1.8"
repository = "https://github.com/vincent-thomas/route-rs"
documentation = "https://docs.rs/titan"
