[workspace]
resolver = "2"
members = [
  "titan",
  "titan-core",
  "titan-http", 
  "titan-utils",
  "titan-server",
  "titan-router",
  "titan-html",
  "titan-html-core",
  "titan-html-derive",
  "titan-lambda"
, "titan-derive"]

[workspace.package]
authors = ["Vincent Thomas"]
categories = []
keywords = ["web"]
license = "MIT"
edition = "2021"
version = "0.4.1"
repository = "https://github.com/vincent-thomas/route-rs"
documentation = "https://docs.rs/titan"
rust-version = "1.82"

[workspace.dependencies]
criterion = "0.5.1"
tokio = "1.38.1"
