[package]
name = "route"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["types"]
types = ["serde", "serde_json", "serde_urlencoded"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.serde_urlencoded]
version = "0.7"
optional = true

[dependencies]
route_core = { path = "../route_core" }
route_http = { path = "../route_http" }
route_router = { path = "../route_router" }
route_server = { path = "../route_server" }
route_utils = { path = "../route_utils" }

pin-project-lite = "0.2.14"

[dev-dependencies]
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread", "time"] }
