[package]
name = "route_core"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
route_http = { workspace = true }
route_utils = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.30"
tower = "0.5.1"
