[package]
name = "route_core"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures-core = "0.3.31"
route_http = { path = "../route_http" }
route_html = { path = "../route_html" }
tower = {version = "0.5.1", features = ["util"]}
