[package]
name = "route_html_derive"
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
cssparser = "0.33.0"
lightningcss = "1.0.0-alpha.61"
