[package]
name = "route_http"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
http = "1.1.0"
mime = "0.3.17"
route_utils = {workspace = true}
bytes = "1"

futures-core = "0.3"
pin-project-lite = "0.2.14"
