[package]
name = "route_server"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.38", features = ["rt","rt-multi-thread", "macros", "net", "time"] }
route_core = { path = "../route_core", version = "0.1.0" }
route_http = { path = "../route_http" }
chrono = "0.4.38"
