[package]
name = "route_server"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
route_core = { path = "../route_core", version = "0.1.0" }
route_http = { path = "../route_http" }
chrono = "0.4.38"
tokio = { version = "1.42.0", features = ["net", "io-util"] }
