[package]
name = "titan-core"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures-core = "0.3.31"
titan-http = { path = "../titan-http", version = "0.1.0" }
titan-html = { path = "../titan-html", version = "0.1.0" }
tower = {version = "0.5.1", features = ["util"]}
