[package]
name = "titan-core"
description = "Traits and core structs/enums for titan"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true

[features]
deploy-lambda = ["dep:lambda_http"]

[dependencies]
futures-core = "0.3.31"
titan-http = { path = "../titan-http", version = "0.2.0" }
titan-html = { path = "../titan-html", version = "0.2.0" }
lambda_http = { version = "0.14.0", optional = true }
tower = {version = "0.5.1", features = ["util"]}
