[package]
name = "titan-html-derive"
description = "Internal proc-macros for the package titan-html"
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
titan-utils = { version = "0.1.2", path = "../titan-utils", features = ["internal-cssvalidate"] }
quote = "1"
