[package]
name = "titan-html-derive"
description = "Internal proc-macros for the package titan-html"
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
# Build dependencies
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1.0.92"

titan-utils = { version = "0.1.10", path = "../titan-utils", features = ["internal-cssvalidate"] }
titan-html-core = { version = "0.1.10", path = "../titan-html-core" }
