[package]
name = "titan-html"
description = "HTML Generator with builtin css-in-rust support. Mainly used in the titan family, but can be used independently"
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
cssparser = "0.33.0"
lightningcss = "1.0.0-alpha.61"
rand = "0.8.5"
titan-html-derive = {path = "../titan-html-derive", version = "0.1.7" }
titan-utils = {path = "../titan-utils", version = "0.1.7", features = ["internal-cssvalidate"]}
paste = "1.0.15"
url = "2.5.4"
