[package]
name = "titan-lambda"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
lambda_http = "0.14.0"
futures-util = "0.3.31"

titan-http = { path = "../titan-http", version = "0.1.5" }
titan-core = { path = "../titan-core", version = "0.1.5", features = ["deploy-lambda"] }
