[package]
name = "titan-lambda"
description = "AWS lambda deployayer for titan and cargo-lambda"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
lambda_http = "0.14.0"
futures-util = "0.3.31"

titan-http = { path = "../titan-http", version = "0.1.6" }
titan-core = { path = "../titan-core", version = "0.1.6", features = ["deploy-lambda"] }
titan = { path = "../titan", version = "0.1.6", features = ["internal-titan-lambda"] }
