[package]
name = "titan-router-derive"
description = "Internal package for titan-router"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
quote = "1.0.36"
syn = {version = "2.0.66"}
proc-macro2 = "1.0"

[lib]
proc-macro = true
