[package]
name = "titan-router"
description = "A good http router for anytihng!"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true

[[bench]]
name = "router_bench"
harness = false

[dev-dependencies]
criterion.workspace = true

