[package]
name = "titan-server"
description = "A http server for the titan family, but can be used independently!"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true

[features]
default = []
date-header = ["dep:chrono"]

[dependencies]
titan-core = { path = "../titan-core", version = "0.1.10" }
titan-http = { path = "../titan-http", version = "0.1.10" }
chrono = {version = "0.4.38", optional = true }
tokio = { version = "1.42.0", features = ["net", "io-util", "rt"] }
futures-util = "0.3.31"
