[package]
name = "titan-utils"
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
internal-cssvalidate = ["dep:cssparser", "dep:lightningcss"]

[dependencies]
cssparser = {version = "0.33.0", optional = true}
lightningcss = { version = "1.0.0-alpha.61", optional = true }
