[package]
name = "titan-utils"
description = "Internal crate for the titan-family"
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
internal-cssvalidate = ["dep:cssparser", "dep:lightningcss"]

[dependencies]
cssparser = {version = "0.33.0", optional = true}
lightningcss = { version = "1.0.0-alpha.61", optional = true, default-features = false }
