[package]
name = "titan"
description = "Titan is a web-framework, SSR engine with css-in-rust support, http server and http router."
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = ["types"]
lambda = ["dep:lambda_http"]
types = ["dep:serde", "dep:serde_json", "dep:serde_urlencoded"]

[[bench]]
name = "router_bench"
harness = false

[dev-dependencies]
criterion.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

titan-html = { path = "../titan-html", version = "0.4.2" }
titan-derive = { path = "../titan-derive", version = "0.4.2" }

futures-util = "0.3.31"
futures-core = "0.3.31"

lambda_http = { version = "0.14.0", optional = true }
bytes = "1.9.0"
tower = { version = "0.5.2", features = ["util"] }

lazy_static = "1.5.0"
pin-project-lite = "0.2.14"

mime = "0.3.17"
http = "1.1.0"
http-body = "1.0.1"

tokio = { version = "1.38.1", features = ["net", "io-util", "rt"] }
