[package]
name = "nice-extractors"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies]
titan = { path = "../../titan", features = ["lambda"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
