[package]
name = "sse"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
futures-util = "0.3.31"
titan = { version = "0.4.2", path = "../../titan" }
tokio = { workspace = true, features = ["net", "time", "macros", "rt-multi-thread"] }
